# Hydra

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini
src/Core/: Engine.cpp  Engine.h  HydraMain.cpp  Log.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/ECS/: Component.h  Entity.h  SpriteComponent.h  TransformComponent.h
src/Editor/: GUIEditor.cpp  GUIEditor.h  HydraEditor.cpp  HydraEditor.h
src/Events/: EditorEvent.h  Event.cpp  Event.h  EventManager.h  MouseEvent.h
src/Math/: Vector2.h
src/Renderer/: Camera.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
src/Renderer/Shaders/: Shader.cpp  Shader.h
